@@ -11,19 +11,22 @@ GridClassKey.panel.TVFieldsCombo = function(config) {
     items.push({
         xtype: 'gridclasskey-combo-tvfields'
         , id: config.id + '-combo' || ''
+        , comboWidth: config.comboWidth || ''
     }, {
         xtype: 'button'
         , text: _('add')
         , handler: function() {
             if (config.applyToGrid) {
-                var targetGrid = Ext.getCmp(config.applyToGrid);
+                var targetGrid = Ext.getCmp(config.applyToGrid),
+                        store = targetGrid.getStore();
                 var fieldsCombo = Ext.getCmp(config.id + '-combo');
                 var comboValue = fieldsCombo.getValue();
                 var text = fieldsCombo.lastSelectionText;
                 if (comboValue) {
-                    targetGrid.data.push([targetGrid.data.length + 1, text]);
-                    targetGrid.getStore().loadData(targetGrid.data);
-                    targetGrid.getView().refresh();
+                    var r = new store.recordType({"sort": store.getCount() + 1, "name": text}); 
+                    r.commit();
+                    store.add(r);
+                    store.commitChanges();
                     Ext.getCmp('modx-panel-resource').markDirty();
                     var btn = Ext.getCmp('modx-abtn-save');
                     if (btn) {
